Adjusting project title size to prevent overlap before media query

--- a/style.css
+++ b/style.css
@@ -719,7 +719,7 @@ PAGE: SINGLE PROJECT
 }
 
 .project-sidebar h2 {
-    font-size: 2.35em;
+    font-size: 2em;
 }
 
 .project-sidebar p {
